--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "dev": "nodemon index.js",
+    "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -22,7 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.15.0",
     "slugify": "^1.6.6",
-    "stripe": "^16.7.0"
+    "stripe": "^16.7.0",
+    "xlsx": "^0.18.5"
   }
 }
